--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "dotenv_consts"
 version = "0.1.0"
 authors = ["panicbit <panicbit.dev@gmail.com>"]
+license = "MIT OR Apache-2.0"
+description = "A macro that expands dotenv variables to constants"
 edition = "2018"
 
 [lib]
