--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["panicbit <panicbit.dev@gmail.com>"]
 license = "MIT OR Apache-2.0"
 description = "A macro that expands dotenv variables to constants"
+repository = "https://github.com/panicbit/dotenv_consts"
 edition = "2018"
 
 [lib]
